# RAG

./: .gitignore  README.md  app.py  ingest.py  main.py  modules.py  pyproject.toml  requirements.txt
modules/: retriver_filter.py
